styles: Fixup footer aligning
* If more content was added which resulted in a scroll wheel to appear, the nav bar would shrink in height.

*ref: https://stackoverflow.com/a/45762747

--- a/src/styles/BaseStyles.css
+++ b/src/styles/BaseStyles.css
@@ -80,8 +80,7 @@ nav {
 
 /* Handle footer at bottom */
 html, body {
-  height: 100%;
-  margin: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
